--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,7 +28,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: maven clean install
+      run: mvn clean install
 
     - uses: mr-smithers-excellent/docker-build-push@v5
         name: Build & push Docker image
